--- a/src/kick/kick.css
+++ b/src/kick/kick.css
@@ -1,5 +1,5 @@
 #start-text {
-    font-size: 36px;
+    font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     color: white;
@@ -11,7 +11,8 @@
     height: 10%;
     display: flex;
     justify-content: center;
-    margin-top: 150%;
+    margin-top: 10%;
+    z-index: 1;
 }
 
 #idle-video {
@@ -23,5 +24,49 @@
     right: 0;
     top: 0;
     bottom: 0;
+    z-index: -1;
+}
+
+#start-video {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+#goal-video {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+#fail-video {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+#gjs-canvas{
+    height: 45%;
+    width: 15%;
+    margin-top: 50%;
+    background: rgba(0, 0, 0, 0);
     z-index: -1;
 }
