--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,9 @@
     margin-top: 70%;
     background: rgba(0, 0, 0, 0.8);
     height: 15vh;
-    width: 100vw;
+    width: 99vw;
+    padding-left: 0%;
+    margin-left: 0%;
     vertical-align: middle;
 }
 
