--- a/src/catch/styles.css
+++ b/src/catch/styles.css
@@ -32,17 +32,7 @@ body {
     text-align: center;
     color: white;
     background: rgba(0, 0, 0, 0.8);
-    align-items: center;
-    width: 100%;
-    height: 10%;
-    display: flex;
-    justify-content: center;
     z-index: 1;
-
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
 #gjs-canvas {
@@ -57,3 +47,30 @@ body {
     width: 100%;
     height: 25%;
 }
+
+.centered-container {
+    align-items: center;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #EE2027;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
