--- a/src/kick/kick.css
+++ b/src/kick/kick.css
@@ -1,5 +1,11 @@
+body {
+    background: #000;;
+    margin:0px;
+    padding:0px;
+}
+
 #start-text {
-    font-size: 40px;
+    font-size: 36px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     color: white;
@@ -11,8 +17,7 @@
     height: 10%;
     display: flex;
     justify-content: center;
-    margin-top: 10%;
-    z-index: 1;
+    margin-top: 150%;
 }
 
 #idle-video {
@@ -75,3 +80,30 @@
     width: 100%;
     height: 50%;
 }
+
+.centered-container {
+    align-items: center;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #EE2027;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
