--- a/src/scream/scream.css
+++ b/src/scream/scream.css
@@ -1,17 +1,32 @@
+
+#background {
+    position: absolute;
+    z-index: 0;
+    margin-left: 0;
+    padding-left: 0px;
+    height: 100vh;
+    width: 100vw;
+}
+
 #filler {
     position: absolute;
     z-index: 1;
+    margin-left: 0;
+    padding-left: 0px;
     top: 100%;
-    height: 99vh;
-    width: 99vw;
+    height: 100vh;
+    width: 100vw;
 }
 
 #mask {
     position: absolute;
     z-index: 2;
+    margin-left: 0;
+    padding-left: 0px;
+    border: 0px;
     top: 0%;
-    height: 99vh;
-    width: 99vw;
+    height: 100vh;
+    width: 100vw;
 }
 
 #start_video {
