--- a/src/juggle/juggle.css
+++ b/src/juggle/juggle.css
@@ -78,3 +78,13 @@ body {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+
+@font-face {
+    font-family: 'QAB';
+    src: url('./assets/QAB.ttf');
+}
+
+@font-face {
+    font-family: 'QAH';
+    src: url('./assets/QAH.ttf');
+}
