--- a/src/scream/scream.css
+++ b/src/scream/scream.css
@@ -8,30 +8,58 @@
     width: 100vw;
 }
 
+@font-face {
+    font-family: "AmericanCaptain";
+    src: url("./assets/american_captain.ttf");
+    }
+
+#filler_text {
+    font-family: AmericanCaptain;
+    position: absolute;
+    margin-left: 855px;
+    top: 180px;
+    color: white;
+    font-size: 50px;
+    z-index: 3;
+}
+
 #filler {
     position: absolute;
-    z-index: 1;
-    margin-left: 0;
+    z-index: 2;
+    margin-left: 340px;
     padding-left: 0px;
-    top: 100%;
-    height: 100vh;
-    width: 100vw;
+    top: 219px;
+    width: 615px;
+    height: 58px;
 }
 
 #mask {
     position: absolute;
-    z-index: 2;
-    margin-left: 0;
+    z-index: 1;
+    margin-left: 94px;
     padding-left: 0px;
     border: 0px;
-    top: 0%;
-    height: 100vh;
-    width: 100vw;
+    top: 104px;
+    width: auto;
+    max-width: 85%;
+    height: auto;
 }
 
 #start_video {
     height: 100vh;
     width: 100vw;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+#background_video {
+    height: 1920px;
+    width: 1080px;
     object-fit: cover;
     position: fixed;
     left: 0;
