--- a/src/catch/styles.css
+++ b/src/catch/styles.css
@@ -28,11 +28,17 @@ body {
 
 #start-text {
     font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
+    word-spacing: 0.25em;
+    font-family: "AmericanCaptain";
     text-align: center;
     color: white;
     background: rgba(0, 0, 0, 0.8);
     z-index: 1;
+}
+
+@font-face {
+    font-family: "AmericanCaptain";
+    src: url("../common/assets/american_captain.ttf");
 }
 
 #gjs-canvas {
