--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 #start-title {
     font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: AmericanCaptain;
     text-align: center;
     color: white;
 }
@@ -17,10 +17,16 @@
     z-index: -1;
 }
 
+@font-face {
+    font-family: "AmericanCaptain";
+    src: url("./common/assets/american_captain.ttf");
+}
+
 #list-container {
+    font-family: AmericanCaptain;
     margin-top: 70%;
     background: rgba(0, 0, 0, 0.8);
-    height: 15vh;
+    height: 20vh;
     width: 99vw;
     padding-left: 0%;
     margin-left: 0%;
@@ -28,8 +34,8 @@
 }
 
 #games-list {
+    font-family: AmericanCaptain;
     font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
     color: white;
     margin: 0 auto;
     width: fit-content;
