--- a/src/scream/scream.css
+++ b/src/scream/scream.css
@@ -1,4 +1,3 @@
-
 #background {
     position: absolute;
     z-index: 0;
@@ -8,10 +7,27 @@
     width: 100vw;
 }
 
+#start-text {
+    font-size: 36px;
+    word-spacing: 0.25em;
+    font-family: AmericanCaptain;
+    text-align: center;
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
+    vertical-align: middle;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    margin-top: 80%;
+}
+
 @font-face {
     font-family: "AmericanCaptain";
-    src: url("./assets/american_captain.ttf");
-    }
+    src: url("../common/assets/american_captain.ttf");
+}
 
 #filler_text {
     font-family: AmericanCaptain;
