--- a/src/kick/kick.css
+++ b/src/kick/kick.css
@@ -2,6 +2,8 @@ body {
     background: #000;;
     margin:0px;
     padding:0px;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 #start-text {
