--- a/src/scream/scream.css
+++ b/src/scream/scream.css
@@ -32,30 +32,30 @@
 #filler_text {
     font-family: AmericanCaptain;
     position: absolute;
-    margin-left: 855px;
-    top: 180px;
+    margin-left: 555px;
+    top: 95px;
     color: white;
-    font-size: 50px;
+    font-size: 45px;
     z-index: 3;
 }
 
 #filler {
     position: absolute;
     z-index: 2;
-    margin-left: 340px;
+    margin-left: 220px;
     padding-left: 0px;
-    top: 219px;
-    width: 615px;
-    height: 58px;
+    top: 148px;
+    width: 25px;
+    height: 35px;
 }
 
 #mask {
     position: absolute;
     z-index: 1;
-    margin-left: 94px;
+    margin-left: 58px;
     padding-left: 0px;
     border: 0px;
-    top: 104px;
+    top: 70px;
     width: auto;
     max-width: 85%;
     height: auto;
@@ -74,8 +74,8 @@
 }
 
 #background_video {
-    height: 1920px;
-    width: 1080px;
+    height: 100vh;
+    width: 100vw;
     object-fit: cover;
     position: fixed;
     left: 0;
